--- a/src/public/views/chat.ejs
+++ b/src/public/views/chat.ejs
@@ -1,65 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"></script>
+<link rel="stylesheet" href="css/general.css" />
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-        crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="css/general.css"/>
-</head>
-
-<body>
-    <div class="container mt-5">
-        <div class="row">
-            <div class="col-md-5">
-                <h1>Redis Chat</h1>
-                <div id="messages">
-                    <textarea id="message" type="text" class="form-control" name="message"
-                        placeholder="Message"></textarea>
-                    <button class="btn btn-info mt-2 mb-3" onClick="emitData()">Send</button>
-                </div>
-
-                <div id="joined"></div>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-md-5">
+            <div id="messages">
+                <textarea id="message" type="text" class="form-control" name="message" placeholder="Message"></textarea>
+                <button class="btn btn-info mt-2 mb-3" onClick="SendData()">Send</button>
             </div>
-            <div class="col-md-4">
-                <div id="messagesList"></div>
-            </div>
+
+            <div id="joined"></div>
+        </div>
+        <div class="col-md-5">
+            <div id="messagesList"></div>
         </div>
     </div>
-    </div>
-
-</body>
+</div>
 
 <script src="/socket.io/socket.io.js"></script>
-<script>
-    const socket = io.connect();
+<script src="../js/chats.js"></script>
 
-    function emitData() {
-        const message = document.querySelector("#message").value;
-        if (message.length > 0) {
-            socket.emit("message", { message, from: "<%= username %>" });
-        }
-
-        document.querySelector("#message").value = "";
-    }
-
-    socket.on("message", ({ from, message }) => {
-        const messageElement = document.createElement("p");
-        messageElement.innerText = `${from}: ${message}`;
-        document.querySelector("#messagesList").appendChild(messageElement);
-    });
-
-    socket.on("joined", username => {
-        const element = document.createElement("h5");
-        element.innerText = `${username} has joined`;
-
-        document.querySelector("#joined").appendChild(element);
-    });
-</script>
 
 </html>
