--- a/src/public/views/chats.ejs
+++ b/src/public/views/chats.ejs
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="css/general.css" />
+    <link rel="stylesheet" href="css/general.css" />
     <title></title>
 </head>
 
@@ -28,52 +28,31 @@
         <div class="row mt-5">
             <div class="col-md-12">
 
-        <ul class="nav nav-tabs mb-3" id="ex1" role="tablist">
-            <li class="nav-item" role="presentation">
-              <a
-                class="nav-link active"
-                id="ex1-tab-1"
-                data-bs-toggle="tab"
-                href="#ex1-tabs-1"
-                role="tab"
-                aria-controls="ex1-tabs-1"
-                aria-selected="true"
-                >User 1</a
-              >
-            </li>
-            <li class="nav-item" role="presentation">
-              <a
-                class="nav-link"
-                id="ex1-tab-2"
-                data-bs-toggle="tab"
-                href="#ex1-tabs-2"
-                role="tab"
-                aria-controls="ex1-tabs-2"
-                aria-selected="false"
-                >User 2</a
-              >
-            </li>
-          </ul>
-          <div class="tab-content" id="ex1-content">
-            <div
-              class="tab-pane fade show active"
-              id="ex1-tabs-1"
-              role="tabpanel"
-              aria-labelledby="ex1-tab-1"
-            >
-            <form action="/chat">
-                <input id="username" type="text" name="username" placeholder="Username" class="form-control" />
-                <button type="submit" class="btn btn-info mt-2">Enter</button>
-            </form>
-            </div>
-            <div class="tab-pane fade" id="ex1-tabs-2" role="tabpanel" aria-labelledby="ex1-tab-2">
-                <iframe class="responsive-iframe" src="/chat" ></iframe>
-            </div>
-          </div>
+                <ul class="nav nav-tabs mb-3" id="ex1" role="tablist">
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link active" id="ex1-tab-1" data-bs-toggle="tab" href="#tabs-user-1" role="tab"
+                            aria-controls="tabs-user-1" aria-selected="true">User 1</a>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link" id="ex1-tab-2" data-bs-toggle="tab" href="#tabs-user-2" role="tab"
+                            aria-controls="tabs-user-2" aria-selected="false">User 2</a>
+                    </li>
+                </ul>
+                <div class="tab-content" id="ex1-content">
+                    <div class="tab-pane fade show active" id="tabs-user-1" role="tabpanel" aria-labelledby="ex1-tab-1">
+                        <iframe frameborder="0" style="height: 400px; overflow:scroll; width: 100%"
+                            src="/chat?username=user1" marginheight="1" marginwidth="1" name="cboxmain" id="cboxmain"
+                            seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true"></iframe>
+                    </div>
+                    <div class="tab-pane fade" id="tabs-user-2" role="tabpanel" aria-labelledby="ex1-tab-2">
+                        <iframe frameborder="0" style="height: 400px; overflow:scroll; width: 100%"
+                            src="/chat?username=user2" marginheight="1" marginwidth="1" name="cboxmain" id="cboxmain"
+                            seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true"></iframe>
+                    </div>
+                </div>
 
-        
-    </div>
-    <script src="/socket.io/socket.io.js"></script>
+            </div>
+            <script src="/socket.io/socket.io.js"></script>
 
 </body>
 
